--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -15,7 +15,7 @@ config X86_32
 config X86_64
 	def_bool y
 	depends on 64BIT
-	select X86_DEV_DMA_OPS
+	select X86_DEV_DMA_OPS if !XEN
 	select ARCH_USE_CMPXCHG_LOCKREF if !XEN
 
 ### Arch settings
@@ -95,8 +95,8 @@ config X86
 	select GENERIC_CLOCKEVENTS_MIN_ADJUST
 	select IRQ_FORCED_THREADING
 	select HAVE_BPF_JIT if X86_64
-	select HAVE_ARCH_TRANSPARENT_HUGEPAGE if !XEN
-	select CLKEVT_I8253 if !XEN
+	select HAVE_ARCH_TRANSPARENT_HUGEPAGE
+	select CLKEVT_I8253
 	select ARCH_HAVE_NMI_SAFE_CMPXCHG
 	select GENERIC_IOMAP
 	select DCACHE_WORD_ACCESS
@@ -105,11 +105,11 @@ config X86
 	select HAVE_ARCH_SECCOMP_FILTER
 	select BUILDTIME_EXTABLE_SORT
 	select GENERIC_CMOS_UPDATE
-	select HAVE_ARCH_SOFT_DIRTY if X86_64 && !XEN
-	select CLOCKSOURCE_WATCHDOG if !XEN
+	select HAVE_ARCH_SOFT_DIRTY if X86_64
+	select CLOCKSOURCE_WATCHDOG
 	select GENERIC_CLOCKEVENTS
 	select ARCH_CLOCKSOURCE_DATA
-	select GENERIC_CLOCKEVENTS_BROADCAST if (X86_64 || (X86_32 && X86_LOCAL_APIC)) && !XEN
+	select GENERIC_CLOCKEVENTS_BROADCAST if X86_64 || (X86_32 && X86_LOCAL_APIC)
 	select GENERIC_TIME_VSYSCALL
 	select KTIME_SCALAR if X86_32
 	select GENERIC_STRNCPY_FROM_USER
@@ -881,13 +881,11 @@ config X86_UP_IOAPIC
 config X86_LOCAL_APIC
 	def_bool y
 	depends on X86_64 || SMP || X86_32_NON_STANDARD || X86_UP_APIC || PCI_MSI
-	depends on !XEN_UNPRIVILEGED_GUEST
 
 config X86_IO_APIC
 	def_bool y
 	depends on X86_64 || SMP || X86_32_NON_STANDARD || X86_UP_IOAPIC || PCI_MSI
-	depends on !XEN_UNPRIVILEGED_GUEST
-	select GENERIC_IRQ_LEGACY_ALLOC_HWIRQ if !XEN
+	select GENERIC_IRQ_LEGACY_ALLOC_HWIRQ
 
 config X86_REROUTE_FOR_BROKEN_BOOT_IRQS
 	bool "Reroute for broken boot IRQs"
@@ -1588,7 +1586,7 @@ config X86_SMAP
 
 config EFI
 	bool "EFI runtime service support"
-	depends on ACPI && !XEN_UNPRIVILEGED_GUEST
+	depends on ACPI && !XEN
 	select UCS2_STRING
 	---help---
 	  This enables the kernel to use EFI runtime services that are
